--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@react-router/node": "^7.9.2",
     "@react-router/serve": "^7.9.2",
+    "@vidstack/react": "^1.12.0",
     "better-sqlite3": "^12.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -38,7 +39,9 @@
     "react-hook-form": "^7.68.0",
     "react-resizable-panels": "^3.0.6",
     "react-router": "^7.9.2",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
+    "vidstack": "^1.12.0",
     "zod": "^4.1.13"
   },
   "devDependencies": {
